--- a/meme/meme/Base.lproj/Main.storyboard
+++ b/meme/meme/Base.lproj/Main.storyboard
@@ -11,6 +11,7 @@
         <scene sceneID="GOa-Lg-bdE">
             <objects>
                 <tabBarController id="YoE-Ms-eRz" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="3VS-cH-HvB"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="QJ4-NX-2hR">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -28,15 +29,52 @@
         <!--Root View Controller-->
         <scene sceneID="DQq-rH-nvT">
             <objects>
-                <tableViewController id="SbX-wt-Lfi" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="TableViewController" id="SbX-wt-Lfi" customClass="MemeTableViewController" customModule="meme" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="1YC-LQ-sr7">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <toolbar key="tableHeaderView" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="T2K-eX-Ocd">
+                            <rect key="frame" x="0.0" y="64" width="600" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                            <items>
+                                <barButtonItem style="plain" systemItem="flexibleSpace" id="s1k-aS-iXt"/>
+                                <barButtonItem title="+" id="6LN-0t-R5u">
+                                    <connections>
+                                        <action selector="addNewMeme:" destination="SbX-wt-Lfi" id="euC-lR-e1J"/>
+                                    </connections>
+                                </barButtonItem>
+                            </items>
+                        </toolbar>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="PkL-7D-Bpr">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MemeTableCell" textLabel="1fP-ZY-uVO" detailTextLabel="Km7-4K-XEm" style="IBUITableViewCellStyleValue1" id="PkL-7D-Bpr">
+                                <rect key="frame" x="0.0" y="136" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="PkL-7D-Bpr" id="ZLt-kS-g67">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="1fP-ZY-uVO">
+                                            <rect key="frame" x="15" y="11" width="34" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                            <variation key="widthClass=compact">
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            </variation>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Km7-4K-XEm">
+                                            <rect key="frame" x="541" y="11" width="44" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                            <variation key="widthClass=compact">
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            </variation>
+                                        </label>
+                                    </subviews>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
@@ -85,11 +123,12 @@
             </objects>
             <point key="canvasLocation" x="-736.5" y="75"/>
         </scene>
-        <!--Collection View Controller-->
+        <!--Meme Collection View Controller-->
         <scene sceneID="EF0-Bs-902">
             <objects>
-                <collectionViewController id="aT2-oY-Ru2" sceneMemberID="viewController">
+                <collectionViewController id="aT2-oY-Ru2" customClass="MemeCollectionViewController" customModule="meme" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="cs0-A1-bqo">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="jFf-We-vmS">
                             <size key="itemSize" width="148" height="140"/>
@@ -98,8 +137,8 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="6RN-4X-vnl">
-                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MemeCell" id="6RN-4X-vnl" customClass="MemeCollectionCell" customModule="meme" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="64" width="148" height="140"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="148" height="140"/>
@@ -108,20 +147,50 @@
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bbE-uq-2yQ">
                                             <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                         </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Top" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c8G-Gz-L4V">
+                                            <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bottom" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bg7-aq-s8I">
+                                            <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
                                 <constraints>
                                     <constraint firstItem="bbE-uq-2yQ" firstAttribute="top" secondItem="6RN-4X-vnl" secondAttribute="topMargin" constant="-8" id="BV9-wh-uWi"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="Bg7-aq-s8I" secondAttribute="trailing" constant="38" id="IY0-wc-FUl"/>
+                                    <constraint firstItem="Bg7-aq-s8I" firstAttribute="bottom" secondItem="6RN-4X-vnl" secondAttribute="bottomMargin" id="Irc-eP-ASi"/>
+                                    <constraint firstItem="Bg7-aq-s8I" firstAttribute="top" secondItem="c8G-Gz-L4V" secondAttribute="bottom" constant="82" id="SUO-Qm-Yzq"/>
                                     <constraint firstAttribute="trailingMargin" secondItem="bbE-uq-2yQ" secondAttribute="trailing" constant="-8" id="XGS-oK-4re"/>
                                     <constraint firstAttribute="bottomMargin" secondItem="bbE-uq-2yQ" secondAttribute="bottom" constant="-8" id="XNS-Fy-d6P"/>
+                                    <constraint firstItem="c8G-Gz-L4V" firstAttribute="top" secondItem="6RN-4X-vnl" secondAttribute="topMargin" id="ZaA-7B-oUH"/>
+                                    <constraint firstItem="c8G-Gz-L4V" firstAttribute="leading" secondItem="6RN-4X-vnl" secondAttribute="leadingMargin" constant="52" id="cUJ-JJ-hC7"/>
+                                    <constraint firstItem="Bg7-aq-s8I" firstAttribute="top" secondItem="c8G-Gz-L4V" secondAttribute="bottom" constant="82" id="fE0-gb-HOT"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="c8G-Gz-L4V" secondAttribute="trailing" constant="51" id="gQE-s7-1CT"/>
                                     <constraint firstItem="bbE-uq-2yQ" firstAttribute="leading" secondItem="6RN-4X-vnl" secondAttribute="leadingMargin" constant="-8" id="hEB-Mc-1HE"/>
+                                    <constraint firstItem="Bg7-aq-s8I" firstAttribute="leading" secondItem="6RN-4X-vnl" secondAttribute="leadingMargin" constant="38" id="yOD-mI-bvD"/>
                                 </constraints>
                                 <variation key="default">
                                     <mask key="subviews">
                                         <exclude reference="bbE-uq-2yQ"/>
+                                        <exclude reference="c8G-Gz-L4V"/>
+                                        <exclude reference="Bg7-aq-s8I"/>
                                     </mask>
                                     <mask key="constraints">
+                                        <exclude reference="IY0-wc-FUl"/>
+                                        <exclude reference="Irc-eP-ASi"/>
+                                        <exclude reference="SUO-Qm-Yzq"/>
+                                        <exclude reference="fE0-gb-HOT"/>
+                                        <exclude reference="yOD-mI-bvD"/>
+                                        <exclude reference="ZaA-7B-oUH"/>
+                                        <exclude reference="cUJ-JJ-hC7"/>
+                                        <exclude reference="gQE-s7-1CT"/>
                                         <exclude reference="BV9-wh-uWi"/>
                                         <exclude reference="XGS-oK-4re"/>
                                         <exclude reference="XNS-Fy-d6P"/>
@@ -131,14 +200,29 @@
                                 <variation key="widthClass=compact">
                                     <mask key="subviews">
                                         <include reference="bbE-uq-2yQ"/>
+                                        <include reference="c8G-Gz-L4V"/>
+                                        <include reference="Bg7-aq-s8I"/>
                                     </mask>
                                     <mask key="constraints">
+                                        <include reference="IY0-wc-FUl"/>
+                                        <include reference="Irc-eP-ASi"/>
+                                        <include reference="SUO-Qm-Yzq"/>
+                                        <include reference="fE0-gb-HOT"/>
+                                        <include reference="yOD-mI-bvD"/>
+                                        <include reference="ZaA-7B-oUH"/>
+                                        <include reference="cUJ-JJ-hC7"/>
+                                        <include reference="gQE-s7-1CT"/>
                                         <include reference="BV9-wh-uWi"/>
                                         <include reference="XGS-oK-4re"/>
                                         <include reference="XNS-Fy-d6P"/>
                                         <include reference="hEB-Mc-1HE"/>
                                     </mask>
                                 </variation>
+                                <connections>
+                                    <outlet property="bottomLabel" destination="Bg7-aq-s8I" id="0YO-VC-dwp"/>
+                                    <outlet property="imageView" destination="bbE-uq-2yQ" id="cTF-1v-5hU"/>
+                                    <outlet property="topLabel" destination="c8G-Gz-L4V" id="hMn-5E-Y4J"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
@@ -155,7 +239,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="meme" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="meme" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -287,6 +371,7 @@
                         <outlet property="mImage" destination="ohi-Gk-RYF" id="hbE-SU-TfP"/>
                         <outlet property="textFieldBottom" destination="nLU-tl-xqu" id="A21-It-TSs"/>
                         <outlet property="textFieldTop" destination="rcF-dY-48P" id="fwK-R4-CFS"/>
+                        <segue destination="YoE-Ms-eRz" kind="show" identifier="ToInitialView" id="hG2-vG-IG0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
